# analytics_engineer_porfolio_project_1

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
ipynb/: metadata_eda.ipynb  open_parquet.ipynb  open_parquet.py  open_parquet_2.ipynb
src/: acs1_variables_us_state.csv  acs5_variables_zip.csv  app.py
src/utils/process/: data_processor.py
